2006-09-04 [colin]	2.4.0cvs146

	* src/messageview.c
		Set stop_loading when clicking on Next
		during load. Don't add a callback to 
		avoid over-complicating things.

2006-09-04 [colin]	2.4.0cvs145

	* src/mimeview.c
	* src/messageview.c
		Fix multiple loads in separate messageview

2006-09-04 [colin]	2.4.0cvs144

	* src/summaryview.c
		Let navigation keys be handled during 
		load

2006-09-04 [colin]	2.4.0cvs143

	* src/messageview.c
	* src/summaryview.c
	* src/textview.c
	* src/textview.h
		Make loading of huge mails (lots of text and/or
		images) cancellable, so the GUI doesn't block 

2006-09-04 [colin]	2.4.0cvs142

	* src/plugins/trayicon/trayicon.c
		Fix annoyance when removing a folder with 
		unread mails: trayicon didn't update

2006-09-04 [paul]	2.4.0cvs141

	* src/gtk/icon_legend.c
		straighten up columns
		Patch by Fabien Vantard

2006-09-04 [wwp]	2.4.0cvs140

	* src/prefs_filtering.c
		fix new line's account name in filtering prefs:
		was "All", is now "(New)".

2006-09-04 [paul]	2.4.0cvs139

	* tools/make.themes.project
		use "AUTOMAKE_OPTIONS = dist-bzip2"
		instead of homebrewed "make release"

2006-09-03 [colin]	2.4.0cvs138

	* src/folderview.c
		Fix bug #1007 (Wrong folder highlighted)

2006-09-03 [colin]	2.4.0cvs137

	* src/compose.c
		Don't set Newsgroup: header to a mail folder
		path

2006-09-03 [paul]	2.4.0cvs136

	* src/prefs_other.c
	* src/prefs_spelling.c
		unify the gui

2006-09-03 [paul]	2.4.0cvs135

	* src/prefs_summaries.c
		correct menu item text in prefs_keybind_apply_clicked()

2006-09-03 [paul]	2.4.0cvs134

	* manual/advanced.xml
		some improvements to the descriptions
	* src/mainwindow.c
	* src/messageview.c
	* src/summaryview.c
	* src/gtk/menu.c
		fix menu sensitivity issues
	* src/prefs_message.c
		drop the useless word 'short'
	* src/prefs_other.c
		add the word 'lines' indicating log length
		is a measure of lines
	* src/textview.c
		fix compilation warnings

2006-09-02 [colin]	2.4.0cvs133

	* src/messageview.c