@@ -1838,3 +1838,4 @@
 ( cvs diff -u -r 1.395.2.243 -r 1.395.2.244 src/summaryview.c;  ) > 2.4.0cvs144.patchset
 ( cvs diff -u -r 1.83.2.83 -r 1.83.2.84 src/mimeview.c;  cvs diff -u -r 1.94.2.103 -r 1.94.2.104 src/messageview.c;  ) > 2.4.0cvs145.patchset
 ( cvs diff -u -r 1.94.2.104 -r 1.94.2.105 src/messageview.c;  ) > 2.4.0cvs146.patchset
+( cvs diff -u -r 1.83.2.84 -r 1.83.2.85 src/mimeview.c;  ) > 2.4.0cvs147.patchset
